--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: SonarQube  CI
 
 on:
   # Trigger analysis when pushing to your main branches, and when creating a pull request.
